// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NarrativeStyleModal snapshots should match snapshot for auto mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-[#f5f5f4] border-2 border-stone-900 w-full max-w-2xl shadow-[12px_12px_0px_rgba(0,0,0,1)] relative"
    >
      <div
        class="p-5 border-b-2 border-stone-900 bg-stone-800 flex justify-between items-center"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            class="w-6 h-6"
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors"
        >
          <span
            class="w-6 h-6"
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-4"
      >
        <div
          class="p-4 border-2 border-dashed border-stone-400 bg-white"
        >
          <div
            class="flex items-center gap-2 text-stone-700 text-sm font-bold uppercase"
          >
            <span
              class="w-4 h-4"
              data-testid="booktext-icon"
            >
              BookText
            </span>
            Active Narrative Context
          </div>
          <div
            class="mt-2 text-sm text-stone-600"
          >
            <p>
              <strong>
                Mode
                :
              </strong>
               
              Auto Genre Mode
            </p>
            <p>
              <strong>
                Genre
                :
              </strong>
               
              fantasy
            </p>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-2 text-left transition-all bg-stone-900 text-white border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Genre Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Keeps the current literary genre and lets the AI adapt tone dynamically for each scene.
            </p>
          </button>
          <button
            class="p-4 border-2 text-left transition-all bg-white text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Brief Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Supply a bespoke writing brief describing rhythm, references, and mandatory techniques. The AI will obey it verbatim.
            </p>
          </button>
        </div>
      </div>
      <div
        class="p-4 border-t-2 border-stone-300 bg-stone-50 flex gap-3"
      >
        <button
          class="flex-1 py-3 px-4 bg-stone-200 text-stone-800 font-bold uppercase text-sm hover:bg-stone-300 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-bold uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors"
        >
          Save Style
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`NarrativeStyleModal snapshots should match snapshot for custom mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-[#f5f5f4] border-2 border-stone-900 w-full max-w-2xl shadow-[12px_12px_0px_rgba(0,0,0,1)] relative"
    >
      <div
        class="p-5 border-b-2 border-stone-900 bg-stone-800 flex justify-between items-center"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            class="w-6 h-6"
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors"
        >
          <span
            class="w-6 h-6"
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-4"
      >
        <div
          class="p-4 border-2 border-dashed border-stone-400 bg-white"
        >
          <div
            class="flex items-center gap-2 text-stone-700 text-sm font-bold uppercase"
          >
            <span
              class="w-4 h-4"
              data-testid="booktext-icon"
            >
              BookText
            </span>
            Active Narrative Context
          </div>
          <div
            class="mt-2 text-sm text-stone-600"
          >
            <p>
              <strong>
                Mode
                :
              </strong>
               
              Custom Brief Mode
            </p>
            <p>
              <strong>
                Genre
                :
              </strong>
               
              fantasy
            </p>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-2 text-left transition-all bg-white text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Genre Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Keeps the current literary genre and lets the AI adapt tone dynamically for each scene.
            </p>
          </button>
          <button
            class="p-4 border-2 text-left transition-all bg-stone-900 text-white border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Brief Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Supply a bespoke writing brief describing rhythm, references, and mandatory techniques. The AI will obey it verbatim.
            </p>
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="flex gap-3 border border-dashed border-stone-300 bg-stone-50 p-3"
          >
            <span
              class="w-4 h-4 text-stone-500 mt-0.5"
              data-testid="info-icon"
            >
              Info
            </span>
            <div>
              <p
                class="text-[11px] font-bold uppercase tracking-wide text-stone-500"
              >
                How to describe it
              </p>
              <p
                class="text-[11px] text-stone-600 leading-snug"
              >
                Specify cadence, references, and rules such as "present tense, cinematic, focus on sensory details".
              </p>
            </div>
          </div>
          <textarea
            class="w-full bg-white border-2 border-stone-400 p-3 text-sm text-stone-900 focus:border-stone-900 outline-none min-h-[140px]"
            placeholder="Describe your narrative style..."
          />
        </div>
      </div>
      <div
        class="p-4 border-t-2 border-stone-300 bg-stone-50 flex gap-3"
      >
        <button
          class="flex-1 py-3 px-4 bg-stone-200 text-stone-800 font-bold uppercase text-sm hover:bg-stone-300 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-bold uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors"
        >
          Save Style
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`NarrativeStyleModal snapshots should match snapshot when closed 1`] = `<div />`;

exports[`NarrativeStyleModal snapshots should match snapshot with Portuguese translations 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-[#f5f5f4] border-2 border-stone-900 w-full max-w-2xl shadow-[12px_12px_0px_rgba(0,0,0,1)] relative"
    >
      <div
        class="p-5 border-b-2 border-stone-900 bg-stone-800 flex justify-between items-center"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            class="w-6 h-6"
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Editor de Estilo Narrativo
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors"
        >
          <span
            class="w-6 h-6"
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-4"
      >
        <div
          class="p-4 border-2 border-dashed border-stone-400 bg-white"
        >
          <div
            class="flex items-center gap-2 text-stone-700 text-sm font-bold uppercase"
          >
            <span
              class="w-4 h-4"
              data-testid="booktext-icon"
            >
              BookText
            </span>
            Contexto Narrativo Ativo
          </div>
          <div
            class="mt-2 text-sm text-stone-600"
          >
            <p>
              <strong>
                Modo
                :
              </strong>
               
              Auto Genre Mode
            </p>
            <p>
              <strong>
                Gênero
                :
              </strong>
               
              fantasy
            </p>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-2 text-left transition-all bg-stone-900 text-white border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Genre Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Keeps the current literary genre and lets the AI adapt tone dynamically for each scene.
            </p>
          </button>
          <button
            class="p-4 border-2 text-left transition-all bg-white text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Brief Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Supply a bespoke writing brief describing rhythm, references, and mandatory techniques. The AI will obey it verbatim.
            </p>
          </button>
        </div>
      </div>
      <div
        class="p-4 border-t-2 border-stone-300 bg-stone-50 flex gap-3"
      >
        <button
          class="flex-1 py-3 px-4 bg-stone-200 text-stone-800 font-bold uppercase text-sm hover:bg-stone-300 transition-colors"
        >
          Cancelar
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-bold uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors"
        >
          Salvar Estilo
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`NarrativeStyleModal snapshots should match snapshot with existing custom style 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-[#f5f5f4] border-2 border-stone-900 w-full max-w-2xl shadow-[12px_12px_0px_rgba(0,0,0,1)] relative"
    >
      <div
        class="p-5 border-b-2 border-stone-900 bg-stone-800 flex justify-between items-center"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            class="w-6 h-6"
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors"
        >
          <span
            class="w-6 h-6"
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-4"
      >
        <div
          class="p-4 border-2 border-dashed border-stone-400 bg-white"
        >
          <div
            class="flex items-center gap-2 text-stone-700 text-sm font-bold uppercase"
          >
            <span
              class="w-4 h-4"
              data-testid="booktext-icon"
            >
              BookText
            </span>
            Active Narrative Context
          </div>
          <div
            class="mt-2 text-sm text-stone-600"
          >
            <p>
              <strong>
                Mode
                :
              </strong>
               
              Custom Brief Mode
            </p>
            <p>
              <strong>
                Genre
                :
              </strong>
               
              fantasy
            </p>
            <p
              class="mt-2 text-xs text-stone-500"
            >
              Last custom brief:
              <span
                class="block mt-1 font-mono text-[11px] bg-stone-100 border border-stone-200 p-2"
              >
                Use present tense and cinematic style
              </span>
            </p>
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-2 text-left transition-all bg-white text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Genre Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Keeps the current literary genre and lets the AI adapt tone dynamically for each scene.
            </p>
          </button>
          <button
            class="p-4 border-2 text-left transition-all bg-stone-900 text-white border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Brief Mode
            </h3>
            <p
              class="text-xs mt-2 text-stone-200 md:text-stone-500"
            >
              Supply a bespoke writing brief describing rhythm, references, and mandatory techniques. The AI will obey it verbatim.
            </p>
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="flex gap-3 border border-dashed border-stone-300 bg-stone-50 p-3"
          >
            <span
              class="w-4 h-4 text-stone-500 mt-0.5"
              data-testid="info-icon"
            >
              Info
            </span>
            <div>
              <p
                class="text-[11px] font-bold uppercase tracking-wide text-stone-500"
              >
                How to describe it
              </p>
              <p
                class="text-[11px] text-stone-600 leading-snug"
              >
                Specify cadence, references, and rules such as "present tense, cinematic, focus on sensory details".
              </p>
            </div>
          </div>
          <textarea
            class="w-full bg-white border-2 border-stone-400 p-3 text-sm text-stone-900 focus:border-stone-900 outline-none min-h-[140px]"
            placeholder="Describe your narrative style..."
          >
            Use present tense and cinematic style
          </textarea>
        </div>
      </div>
      <div
        class="p-4 border-t-2 border-stone-300 bg-stone-50 flex gap-3"
      >
        <button
          class="flex-1 py-3 px-4 bg-stone-200 text-stone-800 font-bold uppercase text-sm hover:bg-stone-300 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-bold uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors"
        >
          Save Style
        </button>
      </div>
    </div>
  </div>
</div>
`;
